2008-05-31  Jürg Billeter  <j@bitron.ch>

	* vala/valasignal.vala:

	Allow non-null sender parameter in signal handlers

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:

	Fix ownership for constant arrays of structs, fixes bug 535560

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Fix delegates with array parameters, fixes bug 519928

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_structure_get_value binding, fixes bug 530817

	* vapi/gstreamer-0.10.vapi: regenerated

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala:
	* vapigen/valagidlparser.vala:

	Support nullable return types

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Fix memory leak when boxing unowned values

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Free boxed value when unboxing

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedynamicsignalbinding.vala:

	Fix dynamic signals for D-Bus objects

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedynamicpropertybinding.vala:
	* gobject/valaccodedynamicsignalbinding.vala:

	Support dynamic properties and signals also for GObject subtypes

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Fix copying nullable structs

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodeunaryexpression.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodeinvocationexpressionbinding.vala:

	Improvements to nullable struct support

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:
	* gobject/valaccodeinvocationexpressionbinding.vala:
	* gobject/valaccodememberaccessbinding.vala:

	Add basic support for nullable structs

	* tests/structs.vala:

	Test nullable struct parameters

2008-05-30  Jürg Billeter  <j@bitron.ch>

	* vala/valadatatype.vala: remove obsolete code
